--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
   "devDependencies": {
     "autoprefixer": "^9.4.3",
     "browser-sync": "^2.26.3",
+    "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-watch": "^5.0.1",
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.1",
